tests/rosetta/out/Zig/abc-problem.error
zig build: exit status 1
/tmp/abc-problem.zig:41:229: error: local constant 'res' shadows local variable from outer scope
/tmp/abc-problem.zig:34:9: note: previous declaration here
